--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
     //Image loading
     implementation 'io.coil-kt:coil:1.4.0'
+    //ImageView Rounded
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+
+
 }
