--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,16 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.MainActivity"
+            android:theme="@style/Theme.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="Android.app.lib_name"
+                android:value=""/>
         </activity>
     </application>
 
